# ypmeteo

./: README.md  example.py  pyproject.toml  setup.cfg
src/ypmeteo/: __init__.py
ypmeteo/: __init__.py
