[metadata]
name = ypmeteo
version = 1.0.0
author = Nathan Fraser
author_email = ndf-zz@6-v.org
description = Extract environmental data directly from Yoctopuce Yocto-Meteo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndf-zz/ypmeteo
keywords = yocto-meteo pyusb
project_urls =
    Bug Tracker = https://github.com/ndf-zz/ypmeteo/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Miscellaneous
[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7
install_requires = pyusb

[options.packages.find]
where = src
